2005-11-26  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/persistence.scm:
	Changed kahua-serializable-object? to return #t for null list.

2005-11-12  ENDO Yasuyuki

	* src/kahua/persistence.scm:
	  check Gauche-dbi 0.2 and later in read-kahua-instance and write-kahua-instance.

2005-11-03  SHIBATA Tomohisa  <shibata@kahua.org>

	* src/kahua/persistence.scm:
	supported class redefine.
	changed to use slot-*-using-class in primitive procedure.
	added change-class method to <kahua-persistnet-base>.
	* test/persistence.scm.in:
	fixed key duplicate.

2005-10-16  Kenji Hisazumi  <nel@soraneko.com>

	* plugins/sendmail.scm:
	fixed for the case if the default encoding is not "eucjp".

2005-10-12  ENDO Yasuyuki <yasuyuki@javaopen.org>

	* Release 0.3.4
	- Known Bugs: kahua-spvr will dead-locks some situation.

2005-10-06  Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua-spvr.scm:
	added a signal handler which catches SIGPIPE and ignores it.

2005-10-04  SHIBATA Tomohisa  <shibata@kahua.org>

	* cgi/kahua.cgi.in:
	pass CGI metavariables to the server via "x-kahua-metavariables"
	header fields.
	* src/kahua/server.scm:
	Added API(kahua-meta-ref) for CGI metavariables.

2005-09-30  ENDO Yasuyuki <yasuyuki@javaopen.org>

	* src/kahua/persistence.scm :
	add primary key in create table of kahua_db_classes and kahua_*

2005-09-23  Nobuo Yamashita  <nobsun@sampou.org>

	* plugins/allow-module.scm:
	added srfi-19

2005-09-11  Shiro Kawai  <shiro@acm.org>

	* src/kahua/session.scm: 
	(use gauche.validator) -> (use gauche.mop.validator)  The former name
	is obsoleted.

2005-08-30  ENDO Yasuyuki <yasuyuki@javaopen.org>

        * src/kahua/persistence.scm : use dbi-escape-sql.

2005-08-24  Nobuo Yamashita  <nobsun@sampou.org>

	* src/kahua-keyserv.scm, src/kahua/config.scm.in:
	Enabled to record kahua-keyserv's process id in 
	work-directory/kahua-keyserv.pid
	

2005-08-22 ENDO Yasuyuki <yasuyuki@javaopen.org>

	* src/kahua/user.scm